--- a/main.css
+++ b/main.css
@@ -5,7 +5,7 @@
     box-sizing: border-box;
 }
 .top-image_block  {
-    background-image: url('images/1583735326-3342.jpg');
+    background-image: url('1583735326-3342.jpg');
     background-size: cover;
     padding: 100px 30px;
     position: relative;
